--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #fdc9d1;
+    background: #dac0f6;
     font-size: 12px;
     overflow: auto
 }
